--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -155,7 +155,11 @@
 
               <!-- Price & Add to Cart -->
               <div class="mt-auto flex items-center justify-between">
-                <span class="text-lg font-bold text-gray-900">₹<%= rp.basePrice %></span>
+               <div>
+             <span class="text-xl font-bold text-black-600">₹<%= rp.price %></span>
+            <span class="line-through text-gray-400">₹<%= rp.oldPrice %></span>
+         </div>
+
                 <a href="/cart/add/<%= rp._id %>" class="text-gray-900 bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:outline-none 
                         focus:ring-yellow-300 font-medium rounded-lg text-xs px-3 py-1.5 text-center">
                   Add to cart
